--- a/inventories/development/hosts.yml
+++ b/inventories/development/hosts.yml
@@ -1,24 +1,18 @@
 ---
+# development environment inventory
+# auto-generated: Mon Jul 28 02:20:24 KST 2025
+
 all:
-  children:
-    mitum_nodes:
-      hosts:
-        node0:
-          ansible_host: 127.0.0.1
-          ansible_port: 2222
-          mitum_node_id: 0
-          mitum_node_port: 4320
-          mitum_api_enabled: true
-          mitum_api_port: 54320
-        node1:
-          ansible_host: 127.0.0.1
-          ansible_port: 2223
-          mitum_node_id: 1
-          mitum_node_port: 4321
-          mitum_api_enabled: false
-      vars:
-        ansible_user: vagrant
-        ansible_ssh_private_key_file: ~/.vagrant.d/insecure_private_key
-        mitum_network_id: "mitum-dev"
-        mitum_keygen_strategy: "centralized"
-        mitum_mongodb_install_method: "docker"
+  vars:
+    ansible_user: ubuntu
+    ansible_ssh_private_key_file: ../../keys/ssh/development/mitum_key
+    ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+    
+    # Mitum settings
+    mitum_environment: development
+    mitum_network_id: mitum-test
+    mitum_chain_id: 100
+
+mitum_nodes:
+  hosts:
+    node0:
