--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,17 +1,98 @@
 [defaults]
+# Inventory
 inventory = inventories/production/hosts.yml
 host_key_checking = True
-retry_files_enabled = True
+gathering = smart
+gather_facts = True
+fact_caching = jsonfile
+fact_caching_connection = .ansible_cache
+fact_caching_timeout = 86400
+
+# Execution
+forks = 20
+poll_interval = 15
+remote_user = ubuntu
+private_key_file = ~/.ssh/id_rsa
+ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
+
+# Output
 stdout_callback = yaml
-callbacks_enabled = timer, profile_tasks
-interpreter_python = auto_silent
+bin_ansible_callbacks = True
+callbacks_enabled = timer, profile_tasks, profile_roles
+nocows = 1
+display_skipped_hosts = False
+display_args_to_stdout = False
+
+# Error handling
+retry_files_enabled = True
+retry_files_save_path = .ansible-retry
+any_errors_fatal = False
+max_fail_percentage = 30
+
+# Paths
+roles_path = roles:galaxy_roles
+library = library
+module_utils = module_utils
+lookup_plugins = plugins/lookup
+filter_plugins = plugins/filter
+action_plugins = plugins/action
+callback_plugins = plugins/callback
+
+# Logging
+log_path = logs/ansible.log
+no_log = False
+
+# Vault
+vault_password_file = .vault_pass
+
+# Performance
+internal_poll_interval = 0.001
 strategy = free
-forks = 50
-# Suppress specific warnings
-action_warnings = False
-deprecation_warnings = False
-command_warnings = False
+transport = smart
+pipelining = True
+
+# Python
+interpreter_python = auto_silent
+
+[inventory]
+enable_plugins = host_list, yaml, ini, auto, toml
+cache = True
+cache_plugin = jsonfile
+cache_connection = .ansible_cache/inventory
+cache_timeout = 3600
+
+[privilege_escalation]
+become = True
+become_method = sudo
+become_user = root
+become_ask_pass = False
 
 [ssh_connection]
-ssh_args = -C -o ControlMaster=auto -o ControlPersist=10m -o ControlPath=~/.ansible/cp/%h-%p-%r
+ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s -o ControlPath=~/.ansible/cp/%h-%p-%r -o ServerAliveInterval=60
+control_path_dir = ~/.ansible/cp
 pipelining = True
+timeout = 30
+retries = 3
+
+[persistent_connection]
+connect_timeout = 30
+command_timeout = 30
+
+[colors]
+highlight = bright white
+verbose = blue
+warn = bright purple
+error = red
+debug = dark gray
+deprecate = purple
+skip = cyan
+unreachable = red
+ok = green
+changed = yellow
+diff_add = green
+diff_remove = red
+diff_lines = cyan
+
+[diff]
+always = True
+context = 3
