--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,80 @@
-# Mitum Ansible Python Requirements - Updated for Python 3.13
-# Version: 3.0.0
+# Mitum Ansible Python Requirements - Python 3.13 Compatible
+# Version: 3.0.1
+# Last Updated: 2024-01-20
 
-# Core Ansible (use latest version compatible with Python 3.13)
+# === Core Ansible ===
 ansible>=10.0.0,<11.0.0
 ansible-core>=2.17.0,<2.18.0
 
-# Essential Dependencies
-jinja2>=3.1.2
-PyYAML>=6.0
-cryptography>=41.0.0
-paramiko>=3.1.0
-packaging>=23.0
-jmespath>=1.0.1
-netaddr>=0.8.0
-urllib3>=1.26.15
-requests>=2.31.0
+# === Essential Dependencies ===
+jinja2>=3.1.2,<4.0.0
+PyYAML>=6.0,<7.0.0
+cryptography>=41.0.0,<42.0.0
+paramiko>=3.1.0,<4.0.0
+packaging>=23.0,<24.0.0
+jmespath>=1.0.1,<2.0.0
+netaddr>=0.8.0,<1.0.0
+urllib3>=1.26.15,<2.0.0
+requests>=2.31.0,<3.0.0
 
-# MongoDB
-pymongo>=4.3.0
-dnspython>=2.3.0
+# === MongoDB ===
+pymongo>=4.3.0,<5.0.0
+dnspython>=2.3.0,<3.0.0
 
-# Security
-bcrypt>=4.0.1
+# === Security ===
+bcrypt>=4.0.1,<5.0.0
+passlib>=1.7.4,<2.0.0
 
-# Ansible Tools
-ansible-lint>=6.14.0
-mitogen>=0.3.3
+# === Ansible Tools ===
+ansible-lint>=6.14.0,<7.0.0
+mitogen>=0.3.3,<0.4.0
+ansible-runner>=2.3.0,<3.0.0
 
-# Cloud Support
-boto3>=1.26.100
-docker>=6.1.0
+# === Cloud Support (Optional) ===
+# Uncomment if using cloud providers
+# boto3>=1.26.100,<2.0.0
+# google-auth>=2.16.0,<3.0.0
+# azure-mgmt-compute>=29.0.0,<30.0.0
+# docker>=6.1.0,<7.0.0
 
-# CLI and Output
-rich>=13.3.0
-click>=8.1.3
-tabulate>=0.9.0
+# === CLI and Output ===
+rich>=13.3.0,<14.0.0
+click>=8.1.3,<9.0.0
+tabulate>=0.9.0,<1.0.0
+colorama>=0.4.6,<1.0.0
 
-# Performance
-psutil>=5.9.5
+# === Performance ===
+psutil>=5.9.5,<6.0.0
+
+# === Validation & Testing ===
+jsonschema>=4.17.0,<5.0.0
+pytest>=7.3.0,<8.0.0
+pytest-ansible>=4.0.0,<5.0.0
+molecule>=5.0.0,<6.0.0
+molecule-docker>=2.1.0,<3.0.0
+
+# === Documentation ===
+sphinx>=6.1.0,<7.0.0
+sphinx-rtd-theme>=1.2.0,<2.0.0
+
+# === Development Tools ===
+black>=23.0.0,<24.0.0
+flake8>=6.0.0,<7.0.0
+pylint>=2.17.0,<3.0.0
+mypy>=1.0.0,<2.0.0
+
+# === Monitoring Integration ===
+prometheus-client>=0.16.0,<1.0.0
+
+# === Backup Tools ===
+boto3>=1.26.0,<2.0.0  # For S3 backups
+azure-storage-blob>=12.14.0,<13.0.0  # For Azure backups
+
+# === API Integration ===
+httpx>=0.23.0,<1.0.0
+aiohttp>=3.8.0,<4.0.0
+
+# === Utilities ===
+python-dateutil>=2.8.0,<3.0.0
+pytz>=2023.3,<2024.0
+pydantic>=1.10.0,<2.0.0
